# mosaique

./: .gitignore  LICENSE  README.md  dune-project  mosaique.opam  mosaique.opam.template
examples/: dune  example_image_processing.ml  vips_highlevel.ml  vips_test.ml  vips_version.ml
examples/output/: .gitignore
lib/vips/: c_flags.sexp  c_library_flags.sexp  dune  vips.ml  vips_bindings.ml  vips_stubs.c  vips_types.ml
src/: dune  mosaique.ml  mosaique.mli  mosaique_stubs.c
src/config/: discover.ml
test/: dune  test_mosaique.ml
